--- a/FlatLabProjectWebApplication/Views/Shared/_Layout.cshtml
+++ b/FlatLabProjectWebApplication/Views/Shared/_Layout.cshtml
@@ -288,8 +288,8 @@
         <!--footer start-->
         <footer class="site-footer">
             <div class="text-center">
-                2013 &copy; FlatLab by VectorLab.
-                <a href="index.html#" class="go-top">
+                Emre Çakıral 2022
+                <a href="" id="yukari" class="go-top">
                     <i class="fa fa-angle-up"></i>
                 </a>
             </div>
@@ -327,6 +327,14 @@
     <script src="~/flatlab-master/js/count.js"></script>
 
     <script>
+        $(window).scroll(function () {
+            if ($(this).scrollTop() > 100)    // Sayfa ne kadar aşağı kayarsa buton görünsün. 100 sayısı = Kaydırma çubuğunun piksel konumu. Bu sayı değiştirilebilir.
+                $("#yukari").fadeIn(500);    // Yukarı çık butonu ne kadar hızla ortaya çıksın. 500 milisaniye = 0,5 saniye. Bu sayı değiştirilebilir.
+            else
+                $("#yukari").fadeOut(500);    // Yukarı çık butonu ne kadar hızla ortadan kaybolsun. 500 milisaniye = 0,5 saniye. Bu sayı değiştirilebilir.
+        });
+
+
 
         //owl carousel
 
@@ -363,6 +371,13 @@
 
         jQuery(document).ready(function () {
             $("time.timeago").timeago();
+
+            $("#yukari").click(function () {    // Yukarı çık butonuna tıklanıldığında aşağıdaki satır çalışır.
+                $("html, body").animate({ scrollTop: "0" }, 500);    // Sayfa ne kadar hızla en yukarı çıksın.
+                // 0 sayısı sayfanın en üstüne çıkılacağını belirtir.
+                // 500 sayısı ne kadar hızla çıkılacağını belirtir. 500 milisaniye = 0,5 saniye. Bu sayı değiştirilebilir.
+                return false;
+            });
         });
 
     </script>
