--- a/FlatLabProjectWebApplication/Views/Shared/MessageListMenu.cshtml
+++ b/FlatLabProjectWebApplication/Views/Shared/MessageListMenu.cshtml
@@ -5,7 +5,7 @@
 
     <div class="user-head">
         <a href="javascript:;" class="inbox-avatar">
-            <img src="img/mail-avatar.jpg" alt="">
+            <img src="~/flatlab-master/img/photos/@Session["Image"]" alt="">
         </a>
         <div class="user-name">
             <h5><a href="/Mail/Inbox">@User.Identity.Name</a></h5>
