--- a/FlatLabProjectWebApplication/Views/Shared/Notification.cshtml
+++ b/FlatLabProjectWebApplication/Views/Shared/Notification.cshtml
@@ -6,12 +6,12 @@
     <li class="dropdown">
         <a data-toggle="dropdown" class="dropdown-toggle" href="index.html#">
             <i class="fa fa-tasks"></i>
-            <span class="badge bg-success"></span>
+            <span class="badge bg-success">0</span>
         </a>
         <ul class="dropdown-menu extended tasks-bar">
             <div class="notify-arrow notify-arrow-green"></div>
             <li>
-                <p class="green">You have 6 pending tasks</p>
+                <p class="green">6 görevin var</p>
             </li>
             <li>
                 <a href="index.html#">
@@ -80,7 +80,7 @@
                 </a>
             </li>
             <li class="external">
-                <a href="index.html#">See All Tasks</a>
+                <a href="index.html#">Tüm görevlere git</a>
             </li>
         </ul>
     </li>
@@ -127,12 +127,12 @@
         <a data-toggle="dropdown" class="dropdown-toggle" href="index.html#">
 
             <i class="fa fa-bell-o"></i>
-            <span class="badge bg-warning">7</span>
+            <span class="badge bg-warning">0</span>
         </a>
         <ul class="dropdown-menu extended notification">
             <div class="notify-arrow notify-arrow-yellow"></div>
             <li>
-                <p class="yellow">You have 7 new notifications</p>
+                <p class="yellow">7 yeni bildiriminiz var</p>
             </li>
             <li>
                 <a href="index.html#">
