--- a/FlatLabProjectWebApplication/Areas/Admin/Views/Manager/AddManager.cshtml
+++ b/FlatLabProjectWebApplication/Areas/Admin/Views/Manager/AddManager.cshtml
@@ -1,18 +1,18 @@
-﻿@model EntityLayer.Concrete.Personnel
+﻿@model EntityLayer.Concrete.Manager
 
 @{
-    ViewBag.Title = "Personel Ekle";
-    Layout = "~/Views/Shared/_AdminLayout.cshtml";
+    ViewBag.Title = "Yönetici Ekle";
+    Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h2>AddPersonnel</h2>
+<h2>AddManager</h2>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal container">
-        <h4>Yeni Personel</h4>
+        <h3>Yönetici Ekle</h3>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -42,7 +42,7 @@
         <div class="form-group">
             <label class="col-md-2">Şifre</label>
             <div class="col-md-7">
-                @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control", type = "password" } })
+                @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control", @type = "password" } })
                 @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -60,14 +60,6 @@
             <div class="col-md-7">
                 @Html.DropDownListFor(x => x.CompanyID, (List<SelectListItem>)ViewBag.companies, new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.CompanyID, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <label class="col-md-2">Yönetici</label>
-            <div class="col-md-7">
-                @Html.DropDownListFor(x => x.ManagerID, (List<SelectListItem>)ViewBag.managers, new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.ManagerID, "", new { @class = "text-danger" })
             </div>
         </div>
 
