--- a/FlatLabProjectWebApplication/Areas/Admin/Views/Manager/EditManager.cshtml
+++ b/FlatLabProjectWebApplication/Areas/Admin/Views/Manager/EditManager.cshtml
@@ -1,20 +1,22 @@
 ﻿@model EntityLayer.Concrete.Manager
 
 @{
-    ViewBag.Title = "Yönetici Ekle";
-    Layout = "~/Views/Shared/_AdminLayout.cshtml";
+    ViewBag.Title = "Yönetici Bilgilerini Düzenle";
+    Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h2>AddManager</h2>
+<h2>EditManager</h2>
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("EditManager", "Manager", FormMethod.Post))
 {
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal container">
-        <h3>Yönetici Ekle</h3>
+        <h3>Yönetici Bilgilerini Düzenle</h3>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.HiddenFor(model => model.ManagerID)
+
         <div class="form-group">
             <label class="col-md-2">Ad</label>
             <div class="col-md-7">
@@ -40,15 +42,7 @@
         </div>
 
         <div class="form-group">
-            <label class="col-md-2">Şifre</label>
-            <div class="col-md-7">
-                @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control", @type = "password" } })
-                @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <label class="col-md-2">E-mail Adresi</label>
+            <label class="col-md-2">Mail Adresi</label>
             <div class="col-md-7">
                 @Html.EditorFor(model => model.MailAddress, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.MailAddress, "", new { @class = "text-danger" })
@@ -56,9 +50,17 @@
         </div>
 
         <div class="form-group">
+            <label class="col-md-2">Şifre</label>
+            <div class="col-md-7">
+                @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
             <label class="col-md-2">Şirket</label>
             <div class="col-md-7">
-                @Html.DropDownListFor(x => x.CompanyID, (List<SelectListItem>)ViewBag.companies, new { @class = "form-control" })
+                @Html.DropDownListFor(model => model.CompanyID, (List<SelectListItem>)ViewBag.companies, new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.CompanyID, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -78,15 +80,11 @@
                 @Html.ValidationMessageFor(model => model.Image, "", new { @class = "text-danger" })
             </div>
         </div>
-
+        <br />
+        <br />
         <div class="form-group">
-            <br />
-            <br />
-            <div class="col-md-offset-2 col-md-2">
-                <input type="submit" value="Onayla" class="btn btn-primary btn-lg" />
-            </div>
-            <div class="col-md-5">
-                <button style="float:right" type="reset" value="Temizle" class="btn btn-default btn-lg">Temizle</button>
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Güncelle" class="btn btn-primary btn-lg" />
             </div>
         </div>
     </div>
