--- a/FlatLabProjectWebApplication/Areas/Admin/Views/Personnel/AddPersonnel.cshtml
+++ b/FlatLabProjectWebApplication/Areas/Admin/Views/Personnel/AddPersonnel.cshtml
@@ -1,22 +1,20 @@
-﻿@model EntityLayer.Concrete.Manager
+﻿@model EntityLayer.Concrete.Personnel
 
 @{
-    ViewBag.Title = "Yönetici Bilgilerini Düzenle";
-    Layout = "~/Views/Shared/_AdminLayout.cshtml";
+    ViewBag.Title = "Personel Ekle";
+    Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h2>EditManager</h2>
+<h2>AddPersonnel</h2>
 
-@using (Html.BeginForm("EditManager", "Manager", FormMethod.Post))
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal container">
-        <h3>Yönetici Bilgilerini Düzenle</h3>
+        <h4>Yeni Personel</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.ManagerID)
-
         <div class="form-group">
             <label class="col-md-2">Ad</label>
             <div class="col-md-7">
@@ -42,7 +40,15 @@
         </div>
 
         <div class="form-group">
-            <label class="col-md-2">Mail Adresi</label>
+            <label class="col-md-2">Şifre</label>
+            <div class="col-md-7">
+                @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control", type = "password" } })
+                @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label class="col-md-2">E-mail Adresi</label>
             <div class="col-md-7">
                 @Html.EditorFor(model => model.MailAddress, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.MailAddress, "", new { @class = "text-danger" })
@@ -50,18 +56,18 @@
         </div>
 
         <div class="form-group">
-            <label class="col-md-2">Şifre</label>
+            <label class="col-md-2">Şirket</label>
             <div class="col-md-7">
-                @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
+                @Html.DropDownListFor(x => x.CompanyID, (List<SelectListItem>)ViewBag.companies, new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.CompanyID, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            <label class="col-md-2">Şirket</label>
+            <label class="col-md-2">Yönetici</label>
             <div class="col-md-7">
-                @Html.DropDownListFor(model => model.CompanyID, (List<SelectListItem>)ViewBag.companies, new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.CompanyID, "", new { @class = "text-danger" })
+                @Html.DropDownListFor(x => x.ManagerID, (List<SelectListItem>)ViewBag.managers, new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.ManagerID, "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -80,11 +86,15 @@
                 @Html.ValidationMessageFor(model => model.Image, "", new { @class = "text-danger" })
             </div>
         </div>
-        <br />
-        <br />
+
         <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Güncelle" class="btn btn-primary btn-lg" />
+            <br />
+            <br />
+            <div class="col-md-offset-2 col-md-2">
+                <input type="submit" value="Onayla" class="btn btn-primary btn-lg" />
+            </div>
+            <div class="col-md-5">
+                <button style="float:right" type="reset" value="Temizle" class="btn btn-default btn-lg">Temizle</button>
             </div>
         </div>
     </div>
