--- a/FlatLabProjectWebApplication/Areas/Admin/Views/Personnel/EditPersonnel.cshtml
+++ b/FlatLabProjectWebApplication/Areas/Admin/Views/Personnel/EditPersonnel.cshtml
@@ -2,8 +2,7 @@
 
 @{
     ViewBag.Title = "EditPersonnel";
-    Layout = "~/Views/Shared/_AdminLayout.cshtml";
-}
+    Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";}
 
 <h2>EditPersonnel</h2>
 
