--- a/FlatLabProjectWebApplication/Areas/Admin/Views/Personnel/Index.cshtml
+++ b/FlatLabProjectWebApplication/Areas/Admin/Views/Personnel/Index.cshtml
@@ -2,8 +2,7 @@
 
 @{
     ViewBag.Title = "Index";
-    Layout = "~/Views/Shared/_AdminLayout.cshtml";
-}
+    Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";}
 <section class="wrapper">
     <div class="row">
         <div class="col-lg-12">
@@ -32,8 +31,8 @@
                                 <td class="hidden-phone">@Html.DisplayFor(modelItem => item.Company.CompanyTitle)</td>
                                 <td><span class="label label-info label-mini">@Html.DisplayFor(modelItem => item.Role)</span></td>
                                 <td>
-                                    <a href="/Personnel/EditPersonnel/@item.PersonnelID" class="btn btn-primary btn-xs"><i class="fa fa-pencil"></i></a>
-                                    <a href="/Personnel/DeletePersonnel/@item.PersonnelID" class="btn btn-danger btn-xs"><i class="fa fa-trash-o "></i></a>
+                                    <a href="/Admin/Personnel/EditPersonnel/@item.PersonnelID" class="btn btn-primary btn-xs"><i class="fa fa-pencil"></i></a>
+                                    <a href="/Admin/Personnel/DeletePersonnel/@item.PersonnelID" class="btn btn-danger btn-xs"><i class="fa fa-trash-o "></i></a>
                                 </td>
                             </tr>
                         </tbody>
