--- a/FlatLabProjectWebApplication/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/FlatLabProjectWebApplication/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -32,7 +32,7 @@
                 <i class="fa fa-bars"></i>
             </div>
             <!--logo start-->
-            <a href="/Admin" class="logo">Admin<span>Panel</span></a>
+            <a href="/Admin/Manager" class="logo">Admin<span>Panel</span></a>
             <!--logo end-->
             <div class="nav notify-row" id="top_menu">
             </div>
@@ -71,8 +71,8 @@
                             <span>Şirket İşlemleri</span>
                         </a>
                         <ul class="sub">
-                            <li><a href="/Company/AddCompany">Yeni Şirket Oluştur</a></li>
-                            <li><a href="/Company">Şirketleri Düzenle</a></li>
+                            <li><a href="/Admin/Company/AddCompany">Yeni Şirket Oluştur</a></li>
+                            <li><a href="/Admin/Company">Şirketleri Düzenle</a></li>
                             <li><a href="boxed_page.html">Yetkileri Düzenle</a></li>
                         </ul>
                     </li>
@@ -83,8 +83,8 @@
                             <span class="dcjq-icon"></span>
                         </a>
                         <ul class="sub">
-                            <li><a href="/Manager/AddManager">Yönetici Ekle</a></li>
-                            <li><a href="/Manager">Yöneticileri Düzenle</a></li>
+                            <li><a href="/Admin/Manager/AddManager">Yönetici Ekle</a></li>
+                            <li><a href="/Admin/Manager">Yöneticileri Düzenle</a></li>
                         </ul>
                     </li>
                     <li class="sub-menu">
@@ -93,8 +93,8 @@
                             <span>Personel İşlemleri</span>
                         </a>
                         <ul class="sub">
-                            <li><a href="/Personnel/AddPersonnel">Personel Ekle</a></li>
-                            <li><a href="/Personnel/Index">Personelleri Düzenle</a></li>
+                            <li><a href="/Admin/Personnel/AddPersonnel">Personel Ekle</a></li>
+                            <li><a href="/Admin/Personnel">Personelleri Düzenle</a></li>
                         </ul>
                     </li>
                     <li>
